correct draft slider

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -3,15 +3,8 @@
 }
 
 .inner {
-  white-space: nowrap;
-  transition: transform 0.4s;
+  display: flex;
+  transition: transform 0.3s;
 }
-
 .carouselItem {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: rgb(75, 77, 235);
-  color: black;
 }
