--- a/src/components/firstSlide/FirstSlide.module.css
+++ b/src/components/firstSlide/FirstSlide.module.css
@@ -5,9 +5,15 @@
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
+  position: relative;
 }
 
 .title {
   text-transform: uppercase;
   font-size: 100px;
+  margin-top: 10vh;
+}
+
+.text{
+   padding-top: 10vh;
 }
