--- a/src/components/slide3/Slide3.module.css
+++ b/src/components/slide3/Slide3.module.css
@@ -6,7 +6,12 @@
     width: 100vw;
     height: 100vh;
     position: relative;
+    
   }
+
+  .content{
+    padding: 0 70px;
+}
   
   .title {
     text-transform: uppercase;
@@ -30,7 +35,6 @@
     font-size: 20px;
     padding: 50px 10px 20px 80px;
     max-width: 300px;
-    z-index: 100;
     
     text-transform: uppercase;
     
@@ -41,11 +45,11 @@
       width: 80px;
       height: auto;
       top: -50px;
-      z-index: 100;
+      z-index: 10;
   }
 
   .bottleImg{
-      width: 100%;
+      width: 90%;
       height: auto;
       position: absolute;
       bottom: 0;
