--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -3,7 +3,8 @@
 
   background-color: rgba(28, 28, 28, 0);
   border: none;
-  width: 200px;
+  width: 250px;
+  z-index: 1000;
 }
 .buttonHome img {
   width: 100%;
